[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
diffy = "0.3"
lazy_static = "1.4"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21" 


