[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
crypto = "0.5.0"
diffy = "0.3"
hex = "0.4.3"
lazy_static = "1.4"
once_cell = "1.9"
regex = "1.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21" 
sha2 = "0.10.6"
tempfile = "3.5.0"


